--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,9 +11,23 @@
     <script src="js/script.js" defer></script>
     <title>Hello Vue</title>
 </head>
+
 <body>
-    <div id="app">
-        <h1></h1>
+    <div class="wrapper">
+        <button id="app" onclick="setTimeout(myFunction, 3000);">
+
+            <h1 :class="myClass">{{ message }}</h1>
+            <h2 @click="changeColor">{{btnMessage}}</h2>
+            <div>
+                <div v-if="myClass === 'red'">
+                    <h2>{{textMessage}}</h2>
+                </div>
+            </div>
+            <div>
+                <img v-if="myClass === 'red'" src="../img/img-vue.jpg" alt="randomImg">
+            </div>
+        </button>
     </div>
 </body>
+
 </html>
